apps/nextcloud/nextcloud-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-ingress-route
  namespace: nextcloud
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`cloud.khider.fr`) 
      services:
        - name: nextcloud
          port: 80
  tls:
    secretName: nextcloud-cert
